13 March 2009: Wouter
	- doxygen and lex/yacc on linux.

12 March 2009: Wouter
	- log to App.logs on windows prints executable identity.
	- fixup tests.
	- munin plugin fix benign locking error printout.
	- anchor-update for windows, called every 24 hours; unbound reloads.

11 March 2009: Wouter
	- winsock event handler resets WSAevents after signalled.
	- winsock event handler tests if signals are really signalled.
	- install and service with log to file works on XP and Vista on 
	  default install location.
	- on windows logging to the Application logbook works (as a service).
	- fix RUN_DIR on windows compile setting in makedist.
	- windows registry has Software\Unbound\ConfigFile element.
	  If does not exist, the default is used. The -c switch overrides it.
	- fix makedist version cleanup function.

10 March 2009: Wouter
	- makedist -w strips out old rc.. and snapshot info from version.
	- setup.exe starts and stops unbound after install, before uninstall.
	- unbound-checkconf recognizes absolute pathnames on windows (C:...).

9 March 2009: Wouter
	- Nullsoft NSIS installer creation script.

5 March 2009: Wouter
	- fixup memory leak introduced on 18feb in mesh reentrant fix.

3 March 2009: Wouter
	- combined icon with 16x16(4) 32x32(4) 48x48(8) 64x64(8).
	- service works on xp/vista, no config necessary (using defaults).
	- windows registry settings.

2 March 2009: Wouter
	- fixup --export-symbols to be -export-symbls for libtool.
	  This should fix extraneous symbols exported from libunbound.
	  Thanks to Ondrej Sury and Robert Edmonds for finding it.
	- iana portlist updated.
	- document FAQ entry on stub/forward zones and default blocking.
	- fix asynclook test app for libunbound not exporting symbols.
	- service install and remove utils that work with vista UAC.
		
27 February 2009: Wouter
	- Fixup lexer, to not give warnings about fwrite. Appeared in
	  new lexer features.
	- makedistro functionality for mingw. Has RC support.