@@ -5,7 +5,7 @@ server:
 	verbosity: 0
 
 	# if you want to log to a file use
-	logfile: "C:\unbound.log"
+	#logfile: "C:\unbound.log"
 
 	# on Windows, this setting makes reports go into the Application log
 	# found in ControlPanels - System tasks - Logs 
